# 905-projet

./: classification.py  pyproject.toml
src/: classification.ipynb
