[tool.poetry]
name = "905-projet-vinckier"
version = "0.1.0"
description = "Project for CHPS905 from Zackarie Vinckier"
authors = ["Zackarie Vinckier <z.vinckier@gmail.com>"]
readme = "README.md"
packages = [{include = "905_projet_vinckier"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
black = "^22.10.0"
keras = "^2.10.0"
matplotlib = "^3.6.1"
jupyter = "^1.0.0"
tensorflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
